# BinanceExchangeHandler

./: .gitignore  CMakeLists.txt  README.md  dockerfile
app/: CMakeLists.txt  main.cpp
cmake-modules/: boostBeast.cmake  rapidJSON.cmake  rapidjsonConfig.cmake  spdlog.cmake
configuration/: config.json  query.json
include/: BinanceHandler.h
src/: BinanceHandler.cpp  CMakeLists.txt  HttpRequest.cpp  JSONParser.cpp  QueryHandler.cpp
unittesting/: BinanceHandlerTests.cpp  CMakeLists.txt
